<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tulsi Mart</string>
    <string name="app_tagline">Fresh Grocery &amp; Daily Essentials</string>
    <string name="loading_tulsi_mart">Loading Tulsi Mart...</string>
    <string name="error_no_internet">No Internet Connection</string>
    <string name="error_network_msg">Unable to connect to Tulsi Mart. Please check your network connection and try again.</string>
    <string name="btn_retry">Try Again</string>
    <string name="exit_dialog_title">Exit Tulsi Mart?</string>
    <string name="exit_dialog_msg">Are you sure you want to exit the application?</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_cancel">Cancel</string>
</resources>
